--- a/afs/templates/views/components/plugins/file-configuration.htm
+++ b/afs/templates/views/components/plugins/file-configuration.htm
@@ -1,9 +1,15 @@
 {% load i18n %}
-<div class="file-configuration" style="display: flex;height: calc(100% - 105px)">
-    <div style="flex: 3;  padding: 10px">
-        <h4><span>{% trans "Data Files" %}</span></h4>
-        <span>{% trans "Select files to define configuration for viewing" %}</span>
-        <div class="pad-btm" data-bind="visible: files().length > 0" style="overflow-y: scroll;padding: 7px; max-height: calc(100% - 100px);">
+<div class="file-configuration" style="width: 100%;height: calc(100% - 105px);display:flex;">
+    <div class="uploaded-files" style="width: 32.6793%;padding: 10px;padding-top: 0;">
+        <h4><span>{% trans "Uploaded Files" %}</span></h4>
+        <span>{% trans "Specify how to process the data files for viewing.  Any additional files (such as images) will be automatically displayed if possible." %}</span>
+        <div class="file-button-container">
+            <div class="file-buttons" data-bind="click:() => {fileMode('data')}" role="button">{% trans "Data Files" %}</div>
+            <div style="margin: 0 5px"></div>
+            <div class="file-buttons" data-bind="click:() => {fileMode('other')}" role="button">{% trans "Additional Files" %}</div>
+        </div>
+
+        <div class="pad-btm" data-bind="visible: currentFiles().length > 0" style="overflow-y: scroll;padding: 7px; max-height: calc(100% - 100px);">
             <table class="table table-striped" cellspacing="0" width="100%">
                 <thead>
                     <tr class="afs-table-header">
@@ -12,68 +18,94 @@
                         <th style="width:40px;" class="afs-table-control all"></th>
                     </tr>
                 </thead>
-                <tbody data-bind="dataTablesForEach: { data: files, as: 'file', dataTableOptions: fileTableConfig }">
+                <tbody data-bind="dataTablesForEach: { data: currentFiles, as: 'file', dataTableOptions: fileTableConfig }">
                     <tr>
                         <td>
                             <div style="display: flex; align-items:center;">
-                                <input style="margin: 8px" type="checkbox" name="selectedFiles" data-bind="checked: $parent.selectedFiles, value: file.fileid"></input>
-                                <div data-bind="text: file.details.name"></div>
+                                <input style="margin: 10px" type="checkbox" data-bind="value: file.fileid, checked: $parent.selectedFiles">
+                                <div style="padding:8px;min-height: 39px;align-items:center;display:flex;cursor:pointer;width:100%" data-bind="click: function() { $parent.displayFile(file) },text: file.details.name"></div>
                             </div>
                         </td>
-                        <td data-bind="text: $parent.rendererConfigs()?.find(config => config.configid == file.details.rendererConfig)?.name"></td>
-                        <td>
-                            <div style="display: flex;">
+                        <td style="padding:8px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file) }">
+                            <div>
+                                <input style="display:inline-block; flex: 1"
+                                    data-bind="
+                                    value: file.details.rendererConfig,
+                                    select2Query: {
+                                        select2Config: {
+                                            clickBubble: false,
+                                            disabled: file.details.disabledConfig,
+                                            width: 'element',
+                                            ajax:{
+                                                url: $parent.rendererUrl,
+                                                results: $parent.processConfigs
+                                            },
+                                            initSelection: $parent.initSelection,
+                                            value: file.details.rendererConfig,
+                                            closeOnSelect: true,
+                                            allowClear: false,
+                                            multiple: false 
+                                        }
+                                    }">
+                            </div>
+                        </td>
+                        <td style="padding:8px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file) }">
+                            <div style="display: flex;min-width: 34px;">
                                 <i style="flex:1"></i>
                                 <i data-bind="visible: $parent.visibleFile() == file.fileid" role="button" aria-label="{% trans "Selected File" %}" class="fa fa-eye"></i>
-                                <i role="button" aria-label="{% trans "Display File Contents" %}" data-bind="click: function() { $parent.updateCodeMirror(file) }" class="fa fa-arrow-right"></i>
                             </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-
-        <button style="margin: 12px 0;" class="btn btn-primary" data-bind="visible: applyConfigurationVisible, click: function() { updateConfiguration() }">{% trans "Apply Configuration" %}</button>
     </div>
-    <div style="flex: 4; border: 1px solid #ddd">
-        <div class="cm" data-bind="codemirror: {
-            value: codeMirrorText,
-            mode: { name: 'javascript', json: true },
-            lineNumbers: true,
-            lineWrapping: true
-        }"></div>
-    </div>
-    <div class="file-configuration" style="flex: 2;padding: 10px; ">
-        <h4><span>{% trans "Select Importer Configuration" %}</span></h4>
-        <span>{% trans "Define how to import your x/y data" %}</span>
-        <div>
-            <!-- ko foreach: {data: rendererConfigs, as: 'configuration'} -->
-            <div style="padding:8px; display:flex;align-items: center;">
-                <input style="margin: 8px" type="radio" name="selectedConfiguration" data-bind="checked: $parent.selectedConfiguration, value: configuration.configid"></input>
-                <span style="flex:1" data-bind="text: configuration.name"></span>
-                <i role="button" aria-label="{% trans Edit %}" class="fa fa-pencil"></i>
-                <i role="button" aria-label="{% trans Delete %}" class="fa fa-trash"></i>
+    <div style="cursor:col-resize; width:18px;" class="resizer"></div>
+    <div class="active-files" style="width: 31.9659%; display: flex; flex-direction: column">
+        <div data-bind="visible: !(selectedFiles().length > 1)">
+            <h4 data-bind="text: selectedFile()?.details?.name"></h4>
+            <div class="cm" style="border: 1px solid #ddd" >
+                <div data-bind="codemirror: {
+                    value: codeMirrorText,
+                    mode: { name: 'javascript', json: true, readOnly: true },
+                    lineNumbers: true,
+                    lineWrapping: true
+                }"></div>
             </div>
-            <!-- /ko -->
         </div>
-        <button class="btn btn-primary" data-bind="click:()=>{showConfigurationPanel(true)}">{% trans "Add Importer Configuration" %}</button>
-        <div data-bind="visible: showConfigurationPanel">
-            <div>{% trans "Add Importer Configuration" %}</div>
-            <div>
-                <div>
-                    <div>{% trans "Header" %}</div>
-                    <input type="radio" name="headerConfig" value="none" data-bind="checked: headerConfig">
-                    <input type="radio" name="headerConfig" value="fixed" data-bind="checked: headerConfig">
-                    <input type="radio" name="headerConfig" value="delimited" data-bind="checked: headerConfig">
-
-                    <input type="text" name="headerDelimiter" data-bind="textInput: headerDelimiter">
-                    <input type="text" name="headerFixed Lines" data-bind="textInput: headerFixedLines">
-                </div>
-                <div>
-                    <label>{% trans "Data Column Delimiter" %}</label>
-                    <input type="text" name="delimiterCharacter" data-bind="textInput: delimiterCharacter">
+        <div data-bind="visible: parsedData() && !(selectedFiles().length > 1)">
+            <h4>{% trans "Import Preview" %}</h4>
+            <div style="display: flex;flex-direction: column; flex: 1" class="parsing-preview">
+                <div class="cm" style="border: 1px solid #ddd" >
+                    <div data-bind="codemirror: {
+                        value: parsedData,
+                        mode: { name: 'text', json: true, readOnly: true },
+                        lineNumbers: true,
+                        lineWrapping: true
+                    }"></div>
                 </div>
             </div>
         </div>
+        <div data-bind="visible: (selectedFiles().length > 1)">
+            <h4>{% trans "Selected Files" %}</h4>
+            <div class="selected-files" data-bind="foreach: {data: selectedFiles(), as: 'file'}">
+                <div data-bind="text: $parent.fileMap()[file]?.details?.name"></div>
+            </div>
+            <span data-bind="visible: !applyConfigurationVisible()">{% trans "Select an importer configuration on the right to apply to all files" %}</span>
+            <button class="btn btn-primary" data-bind="visible: applyConfigurationVisible(), click:()=>{applyConfigurationVisible(false), selectedFiles([])}">{% trans "Apply Importer to Selected Files" %}</button>
+        </div>
+    </div>
+    <div style="cursor:col-resize;width:18px;" class="resizer"></div>
+    <div style="width: 32.3226%;padding: 10px; padding-top: 0;">
+        {% block importerConfiguration %}
+        <!-- ko component: {
+            name: 'importer-configuration',
+            params: {
+                selectedConfiguration: selectedConfiguration,
+                rendererConfigs: rendererConfigs
+            }
+        } --> 
+        <!-- /ko -->
+        {% endblock importerConfiguration %}
     </div>
 </div>
