Update selection label, #1266

--- a/afs/templates/views/components/workflows/project-report-workflow/project-report-select.htm
+++ b/afs/templates/views/components/workflows/project-report-workflow/project-report-select.htm
@@ -20,7 +20,7 @@
     <!-- ko if: termFilter() || physicalThingsValue() -->
     <div style="padding: 5px; margin-top: 15px;">
         <div class="widget-input-label">
-            <span>{% trans "Select an Object" %}</span>
+            <span>{% trans "Select Object(s) to include in your report" %}</span>
         </div>
         <div data-bind="component: {
             name: 'resource-instance-multiselect-widget',
