various bug fixes

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1250,6 +1250,9 @@
     background-color: #fdfdfd;
     border: 1px solid #ddd;
 }
+.file-configuration .file-buttons.active {
+    font-weight: bold;
+}
 .file-configuration .dataTables_wrapper .row:first-child{
     background-color: #ddd;
     padding: 0 5px;
