--- a/afs/templates/views/components/plugins/importer-configuration.htm
+++ b/afs/templates/views/components/plugins/importer-configuration.htm
@@ -34,6 +34,35 @@
                 <input type="text" name="headerFixedLines" data-bind="visible: headerConfig()=='fixed', textInput: headerFixedLines" placeholder="Number of Lines">
             </div>
             <div>
+                <h4 class="file-config-header">{% trans "Footer" %}</h4>
+                <h5>{% trans "Define where your x/y data end in the file" %}</h5>
+                <div style="display: flex; flex-direction: column; padding-bottom: 5px;">
+                    <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-none" type="radio" name="footerConfig" value="none" data-bind="checked: footerConfig"><label for="header-config-none">{% trans "End of File" %}</label></div>
+                    <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-delimited" type="radio" name="footerConfig" value="delimited" data-bind="checked: footerConfig"><label for="header-config-delimited">{% trans "File footer begins after specific text (consistent ending text)" %}</label></div>
+                </div>
+                <input type="text" name="headerDelimiter" data-bind="visible: footerConfig()=='delimited', textInput: footerDelimiter" placeholder="Ending Text">
+            </div>
+            <div>
+                <h4>{% trans "Transformations" %}</h4>
+                <h5>{% trans "Optionally define a transformation for \"y\" data" %}</h5>
+                <input style="display:inline-block; flex: 1"
+                data-bind="
+                value: selectedTransformation,
+                select2Query: {
+                    select2Config: {
+                        clickBubble: true,
+                        disabled: false,
+                        width: 'element',
+                        data: xyTransformations(),
+                        placeholder: placeholder,
+                        value: selectedTransformation,
+                        closeOnSelect: true,
+                        allowClear: false,
+                        multiple: false 
+                    }
+                }">
+            </div>
+            <div>
                 <h4>{% trans "Data Column Delimiter" %}</h4>
                 <h5>{% trans "Define how the data are separated" %}</h5>
                 <div style="display: flex; flex-direction: row">
@@ -43,6 +72,7 @@
                     <div class="data-delimiter-radio"><input id="delimiter-other" type="radio" name="dataDelimiter" value="other" data-bind="checked: dataDelimiterRadio"><label for="delimiter-other">{% trans "Other" %}</label></div>
                 </div>
                 <input type="text" name="delimiterCharacter" data-bind="visible: dataDelimiterRadio()=='other', textInput: dataDelimiter">
+                <div style="display: flex; margin: 5px 0;"><input type="checkbox" name="includeDelimiter" value="includeDelimiter" data-bind="checked:includeDelimiter"><label style="padding: 0 10px" for="header-config-none">{% trans "Include Delimiter in Value (example: + or - might be part of a numeric value)" %}</label></div>
             </div>
         </div>
         <div style="display: flex;background-color: #eee;border-top: 1px solid #ddd">
