Fixes #10005 - cleans up variable names

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -55,7 +55,7 @@
             name: 'manifest-manager',
             params: {
                 summary: true,
-                shouldShowEditService: $data.shouldShowEditService,
+                shouldShowSelectService: $data.shouldShowSelectService,
                 manifestData: manifestData,
                 renderContext: 'manifest-workflow',
                 transactionId: workflowId
