--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -53,7 +53,7 @@
             name: 'manifest-manager',
             params: {
                 summary: true,
-                shouldShowEditService: $data.shouldShowEditService,
+                shouldShowSelectService: $data.shouldShowSelectService,
                 manifestData: manifestData,
                 renderContext: 'manifest-workflow',
                 transactionId: workflowId
