Show image for physical things in multiselect widget
Fixes #1310

--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/project-report-select.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/project-report-select.htm
@@ -29,6 +29,7 @@
                 renderContext: 'workflow', 
                 value: physicalThingsValue,
                 disabled: locked,
+                graphids: ['9519cb4f-b25b-11e9-8c7b-a4d18cec433a'],  // physical thing
             }
         }"></div>
     </div>
