Adds message about failing upload to address #1318

--- a/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
@@ -34,6 +34,13 @@
     </div>
 </div>
 
+<!-- ko if: uploadFailed -->
+<div style="width: calc(50%-46px); margin: 15px 45px; padding: 10px; border: 1px solid #eee;" class="afs-error-message ep-alert-red">
+    <i class="fa fa-warning" style="margin: 0 6px;"></i>
+    {% trans 'Failed to upload files.  Try again or contact an administrator.'%}
+</div>
+<!-- /ko -->
+
 <div class="file-chart-upload-panel">
     <!-- ko if: files().length === 0 -->
     <div class="gallery-controls new-tile">
