--- a/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
@@ -35,7 +35,7 @@
 </div>
 
 <!-- ko if: uploadFailed -->
-<div style="width: calc(50%-46px); margin: 15px 45px; padding: 10px; border: 1px solid #eee;" class="afs-error-message ep-alert-red">
+<div style="width: calc(50% - 46px); margin: 15px 45px; padding: 10px; border: 1px solid #eee;" class="afs-error-message ep-alert-red">
     <i class="fa fa-warning" style="margin: 0 6px;"></i>
     {% trans 'Failed to upload files.  Try again or contact an administrator.'%}
 </div>
