--- a/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -72,27 +72,10 @@
                 </div>
 
                 <div data-bind="visible: self.showDatasetDetails">
-
-                    <div class="format-select" data-bind="visible: selectedPartHasCurrentObservation() && selectedPartDefaultFormat() == undefined">
-                        <input style="display:inline-block; margin-top: 70px;"
-                        data-bind="select2Query: {
-                            select2Config: {
-                                clickBubble: true,
-                                disabled: false,
-                                data: formats(),
-                                value: selectedPartDefaultFormat,
-                                allowClear: true,
-                                multiple: false,
-                                placeholder: {% trans "'Choose a Default Text File Format'" %}}}" >
-                    </div>
-                    <div style="margin-bottom: 10px" data-bind="visible: selectedPartDefaultFormat() != undefined">
-                        <span>{% trans "Default Text File Format" %}:</span>
-                        <span style="font-weight: bold" data-bind="text: formats().find((x) => x.id == ko.unwrap(selectedPartDefaultFormat))?.text"></span>
-                    </div>
-                    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;" data-bind="visible: selectedPartDefaultFormat() != undefined">
+                    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;">
                         <span>{% trans "Supported image files and PDF files are automatically detected and displayed." %}</span>
                     </div>
-                    <div data-bind="visible: selectedPartDefaultFormat() != undefined || !selectedPartHasCurrentObservation()">
+                    <div data-bind="visible: selectedPartHasCurrentObservation()">
                         <div class="dataset-name">
                             <label class="control-label">{% trans "Dataset Name" %}</label>
                             <div style="display: flex">
@@ -103,6 +86,12 @@
                                 <input class="afs-calculated-datasetname" style="flex: 1" disabled type="text" data-bind="textInput: selectedPartHasCurrentObservation() ? selectedPart().calcDatasetName : selectedPart().datasetName"></input>
                             </div>
                         </div>
+                        <!-- ko if: uploadFailed -->
+                        <div style="padding: 10px; border: 1px solid #eee;" class="afs-error-message ep-alert-red">
+                            <i class="fa fa-warning" style="margin: 0 6px;"></i>
+                            {% trans 'Failed to upload files.  Try again or contact an administrator.'%}
+                        </div>
+                        <!-- /ko -->
                         <div class="dropzone-photo-upload" style="height: 80px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
                             <div class="file-workbench-links">
                                 <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
