--- a/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/upload-files-step.htm
@@ -29,28 +29,19 @@
         <!-- /ko -->
     </div>
 
-    <div class="format-select" style="width: 50%" data-bind="visible: defaultFormat() == undefined">
-        <input style="display:inline-block;"
-        data-bind="select2Query: {
-            select2Config: {
-                clickBubble: true,
-                disabled: false,
-                data: formats(),
-                value: defaultFormat,
-                allowClear: true,
-                multiple: false,
-                placeholder: {% trans "'Available Formats'" %}}}" >
-    </div>
-    <div style="margin-bottom: 10px" data-bind="visible: defaultFormat() != undefined">
-        <span>{% trans "Default Text File Format" %}:</span>
-        <span style="font-weight: bold" data-bind="text: formats().find((x) => x.id == ko.unwrap(defaultFormat))?.text"></span>
-    </div>
-    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9; width: 50%" data-bind="visible: defaultFormat() != undefined">
+    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9; width: 50%">
         <span>{% trans "Supported image files and PDF files are automatically detected and displayed." %}</span>
     </div>
 </div>
 
-<div class="file-chart-upload-panel" data-bind="visible: defaultFormat() != undefined">
+<!-- ko if: uploadFailed -->
+<div style="width: calc(50% - 46px); margin: 15px 45px; padding: 10px; border: 1px solid #eee;" class="afs-error-message ep-alert-red">
+    <i class="fa fa-warning" style="margin: 0 6px;"></i>
+    {% trans 'Failed to upload files.  Try again or contact an administrator.'%}
+</div>
+<!-- /ko -->
+
+<div class="file-chart-upload-panel">
     <!-- ko if: files().length === 0 -->
     <div class="gallery-controls new-tile">
         <div class="dropzone-photo-upload" data-bind="dropzone: dropzoneOptions">
