--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/project-report-select.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/project-report-select.htm
@@ -18,7 +18,7 @@
     </div>
     <!-- /ko -->
     <!-- ko if: termFilter() || physicalThingsValue() -->
-    <div style="padding: 5px; margin-top: 15px;">
+    <div style="margin-top: 15px;">
         <div class="widget-input-label">
             <span>{% trans "Select Object(s) to include in your report" %}</span>
         </div>
