Open downloaded files in a new tab #1339

--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/download-project-files.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/download-project-files.htm
@@ -31,7 +31,7 @@
                 <tr>
                     <td>
                         <input type="checkbox" data-bind="checked: file.selected">
-                        <a class="file-listing-link" data-bind="text: file.name, attr: { href: file.url }"></a>
+                        <a class="file-listing-link" target="_blank" data-bind="text: file.name, attr: { href: file.url }"></a>
                     </td>
                     <td class="file-listing-value" data-bind="text: file.interpretation"></td>
                     <td class="file-listing-value" data-bind="text: observation.description"></td>
