--- a/arches_for_science/templates/views/components/plugins/init-workflow.htm
+++ b/arches_for_science/templates/views/components/plugins/init-workflow.htm
@@ -28,6 +28,7 @@
         >
             <div style="width: 100%; display: flex; justify-content: flex-end; padding: 10px 12px;">
                 <i 
+                    aria-label="{% trans 'Close Incomplete Workflow Modal' %}"
                     class="fa fa-times" style="font-size: 20px; cursor: pointer;"
                     data-bind="click: function(){ $data.shouldShowIncompleteWorkflowsModal(false); }"
                 ></i>
